--- a/main.html
+++ b/main.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
@@ -10,7 +9,24 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<div class="container">
+		<h1 id="verification_heading">Verify Your Account</h1>
+		<p id="verification_subtext">
+			We emailed you the six digit code to <strong>acciojob@email.com</strong>,
+			Enter the code below to confirm your email address.
+		</p>
+		<div class="code-container">
+			<input type="text" class="code" maxlength="1" />
+			<input type="text" class="code" maxlength="1" />
+			<input type="text" class="code" maxlength="1" />
+			<input type="text" class="code" maxlength="1" />
+			<input type="text" class="code" maxlength="1" />
+			<input type="text" class="code" maxlength="1" />
+		</div>
+		<div class="note">
+			This is a design only. We didn't actually send you an email as we don't have your email, right?
+		</div>
+	</div>
 </body>
 
 </html>
