--- a/main.html
+++ b/main.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-<html>
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
@@ -16,12 +14,12 @@
 			Enter the code below to confirm your email address.
 		</p>
 		<div class="code-container">
-			<input type="text" class="code" maxlength="1" />
-			<input type="text" class="code" maxlength="1" />
-			<input type="text" class="code" maxlength="1" />
-			<input type="text" class="code" maxlength="1" />
-			<input type="text" class="code" maxlength="1" />
-			<input type="text" class="code" maxlength="1" />
+			<input type="text" class="code" id="code-1" placeholder="0" min="0" max="9" required/>
+			<input type="text" class="code" id="code-2" placeholder="0" min="0" max="9" required/>
+			<input type="text" class="code" id="code-3" placeholder="0" min="0" max="9" required/>
+			<input type="text" class="code" id="code-4" placeholder="0" min="0" max="9" required/>
+			<input type="text" class="code" id="code-5" placeholder="0" min="0" max="9" required/>
+			<input type="text" class="code" id="code-6" placeholder="0" min="0" max="9" required/>
 		</div>
 		<div class="note">
 			This is a design only. We didn't actually send you an email as we don't have your email, right?
