--- a/main.html
+++ b/main.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Email Verification</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-	<div class="container">
-		<h1 id="verification_heading">Verify Your Account</h1>
-		<p id="verification_subtext">
-			We emailed you the six digit code to <strong>acciojob@email.com</strong>,
-			Enter the code below to confirm your email address.
-		</p>
-		<div class="code-container">
-			<input type="text" class="code" id="code-1" placeholder="0" min="0" max="9" required/>
-			<input type="text" class="code" id="code-2" placeholder="0" min="0" max="9" required/>
-			<input type="text" class="code" id="code-3" placeholder="0" min="0" max="9" required/>
-			<input type="text" class="code" id="code-4" placeholder="0" min="0" max="9" required/>
-			<input type="text" class="code" id="code-5" placeholder="0" min="0" max="9" required/>
-			<input type="text" class="code" id="code-6" placeholder="0" min="0" max="9" required/>
-		</div>
-		<div class="note">
-			This is a design only. We didn't actually send you an email as we don't have your email, right?
-		</div>
-	</div>
+  <div class="container">
+    <h1 id="verification_heading">Verify Your Account</h1>
+    <p id="verification_subtext">
+      We emailed you the six digit code to <strong>acciojob@email.com</strong>,
+      Enter the code below to confirm your email address.
+    </p>
+    <div class="code-container">
+      <input type="text" class="code" id="code-1" placeholder="0" min="0" max="9" required />
+      <input type="text" class="code" id="code-2" placeholder="0" min="0" max="9" required />
+      <input type="text" class="code" id="code-3" placeholder="0" min="0" max="9" required />
+      <input type="text" class="code" id="code-4" placeholder="0" min="0" max="9" required />
+      <input type="text" class="code" id="code-5" placeholder="0" min="0" max="9" required />
+      <input type="text" class="code" id="code-6" placeholder="0" min="0" max="9" required />
+    </div>
+    <div class="note">
+      This is a design only. We didn't actually send you an email as we don't have your email, right?
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
-
 </html>
